Update Use Cases?

--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -13,17 +13,17 @@ description: "Purpose-built for the Internet of Agents"
   <Card title="Chains" icon="link" href="/cookbook/x402/become-an-x402-seller">
     Deploy your own private SKALE Chain with full customization, dedicated resources, and enterprise-grade privacy.
   </Card>
-  
+
   <Card title="Agents" icon="window" href="/cookbook/agents/build-an-agent">
     Build and deploy your agent in minutes on SKALE Hubs with zero gas fees.
   </Card>
 
-  <Card title="x402 Seller" icon="link" href="/cookbook/x402/become-an-x402-seller">
+  <Card title="x402 Sellers" icon="link" href="/cookbook/x402/become-an-x402-seller">
     Accept x402 payments and sell your products and services on SKALE.
   </Card>
 </CardGroup>
 
-Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get-started/use-cases/agentic-commerce).
+Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get-started/use-cases/ai-agents).
 
 ### **Get Funded**
 
