--- a/cookbook/deployment/setup-hardhat.mdx
+++ b/cookbook/deployment/setup-hardhat.mdx
@@ -220,14 +220,14 @@ my-skale-project/
 
 Now that Hardhat is set up, you can:
 
-- [Deploy an ERC-20 Token](/cookbook/deploy-erc20-token)
-- [Deploy an ERC-721 Token](/cookbook/deploy-erc721-token)
-- [Deploy an ERC-1155 Token](/cookbook/deploy-erc1155-token)
+- [Deploy an ERC-20 Token](/cookbook/smart-contracts/deploy-erc20-token)
+- [Deploy an ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token)
+- [Deploy an ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token)
 - [Deploy on SKALE](/developers/deploy-on-skale)
 
 ## Related Topics
 
-- [Setup Foundry](/cookbook/setup-foundry)
+- [Setup Foundry](/cookbook/deployment/setup-foundry)
 - [Solidity Quickstart](/developers/solidity-quickstart)
 - [Troubleshooting](/developers/troubleshooting)
 
