--- a/cookbook/random-numbers/rng-get-random-number.mdx
+++ b/cookbook/random-numbers/rng-get-random-number.mdx
@@ -219,7 +219,7 @@ Random numbers are generated per block. Multiple calls in the same block will re
 
 ## Related Topics
 
-- [Flip a Coin with RNG](/cookbook/rng-flip-coin)
+- [Flip a Coin with RNG](/cookbook/random-numbers/rng-flip-coin)
 - [Random Number Generation](/developers/random-number-generation)
 - [Deploy on SKALE](/developers/deploy-on-skale)
 
