--- a/cookbook/x402/x402-accepting-payments.mdx
+++ b/cookbook/x402/x402-accepting-payments.mdx
@@ -188,9 +188,9 @@ contract MultiTokenPaymentReceiver {
 
 ## Related Topics
 
-- [Buying with x402](/cookbook/x402-buying)
-- [Running a Facilitator on SKALE](/cookbook/x402-facilitator)
-- [Using Non-USDC Tokens](/cookbook/x402-non-usdc-tokens)
+- [Buying with x402](/cookbook/x402/buying)
+- [Running a Facilitator on SKALE](/cookbook/x402/facilitator)
+- [Using Non-USDC Tokens](/cookbook/x402/non-usdc-tokens)
 - [Payments on SKALE](/developers/payments-on-skale)
 
 ## Resources
