--- a/cookbook/x402/x402-facilitator.mdx
+++ b/cookbook/x402/x402-facilitator.mdx
@@ -261,9 +261,9 @@ contract FlexibleFeeFacilitator {
 
 ## Related Topics
 
-- [Accepting x402 Payments](/cookbook/x402-accepting-payments)
-- [Buying with x402](/cookbook/x402-buying)
-- [Using Non-USDC Tokens](/cookbook/x402-non-usdc-tokens)
+- [Accepting x402 Payments](/cookbook/x402/accepting-payments)
+- [Buying with x402](/cookbook/x402/buying)
+- [Using Non-USDC Tokens](/cookbook/x402/non-usdc-tokens)
 - [Payments on SKALE](/developers/payments-on-skale)
 
 ## Resources
