--- a/cookbook/x402/x402-non-usdc-tokens.mdx
+++ b/cookbook/x402/x402-non-usdc-tokens.mdx
@@ -291,10 +291,10 @@ Popular tokens you might want to support:
 
 ## Related Topics
 
-- [Accepting x402 Payments](/cookbook/x402-accepting-payments)
-- [Buying with x402](/cookbook/x402-buying)
-- [Running a Facilitator on SKALE](/cookbook/x402-facilitator)
-- [Deploy an ERC-20 Token](/cookbook/deploy-erc20-token)
+- [Accepting x402 Payments](/cookbook/x402/accepting-payments)
+- [Buying with x402](/cookbook/x402/buying)
+- [Running a Facilitator on SKALE](/cookbook/x402/facilitator)
+- [Deploy an ERC-20 Token](/cookbook/smart-contracts/deploy-erc20-token)
 
 ## Resources
 
