--- a/cookbook/deployment/setup-foundry.mdx
+++ b/cookbook/deployment/setup-foundry.mdx
@@ -176,14 +176,14 @@ When deploying to SKALE, remember to:
 
 Now that Foundry is set up, you can:
 
-- [Deploy an ERC-20 Token](/cookbook/deploy-erc20-token)
-- [Deploy an ERC-721 Token](/cookbook/deploy-erc721-token)
-- [Deploy an ERC-1155 Token](/cookbook/deploy-erc1155-token)
+- [Deploy an ERC-20 Token](/cookbook/smart-contracts/deploy-erc20-token)
+- [Deploy an ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token)
+- [Deploy an ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token)
 - [Solidity Quickstart](/developers/solidity-quickstart)
 
 ## Related Topics
 
-- [Setup Hardhat](/cookbook/setup-hardhat)
+- [Setup Hardhat](/cookbook/deployment/setup-hardhat)
 - [Deploy on SKALE](/developers/deploy-on-skale)
 - [Troubleshooting](/developers/troubleshooting)
 
