--- a/cookbook/smart-contracts/verify-smart-contracts.mdx
+++ b/cookbook/smart-contracts/verify-smart-contracts.mdx
@@ -185,9 +185,9 @@ If automated verification fails, you can manually verify:
 
 ## Related Topics
 
-- [Deploy an ERC-20 Token](/cookbook/deploy-erc20-token)
-- [Deploy an ERC-721 Token](/cookbook/deploy-erc721-token)
-- [Deploy an ERC-1155 Token](/cookbook/deploy-erc1155-token)
-- [Setup Foundry](/cookbook/setup-foundry)
-- [Setup Hardhat](/cookbook/setup-hardhat)
+- [Deploy an ERC-20 Token](/cookbook/smart-contracts/deploy-erc20-token)
+- [Deploy an ERC-721 Token](/cookbook/smart-contracts/deploy-erc721-token)
+- [Deploy an ERC-1155 Token](/cookbook/smart-contracts/deploy-erc1155-token)
+- [Setup Foundry](/cookbook/deployment/setup-foundry)
+- [Setup Hardhat](/cookbook/deployment/setup-hardhat)
 
