--- a/cookbook/x402/facilitator.mdx
+++ b/cookbook/x402/facilitator.mdx
@@ -48,8 +48,6 @@ const facilitator = createFacilitator({
       scheme: 'exact',
       network: 'skale-base-sepolia',
       handler: async (payment) => {
-        // Verify and process payment
-        // Return settlement result
         return { success: true };
       },
     },
@@ -96,22 +94,14 @@ Validates and processes payment settlements:
 ```typescript
 app.post('/settle', async (req, res) => {
   const payment = req.body;
+  const isValid = await validatePayment(payment);
   
-  try {
-    // Validate payment signature
-    const isValid = await validatePayment(payment);
-    
-    if (!isValid) {
-      return res.status(400).json({ error: 'Invalid payment' });
-    }
-    
-    // Process settlement
-    const result = await processSettlement(payment);
-    
-    res.json({ success: true, result });
-  } catch (error) {
-    res.status(500).json({ error: error.message });
+  if (!isValid) {
+    return res.status(400).json({ error: 'Invalid payment' });
   }
+  
+  const result = await processSettlement(payment);
+  res.json({ success: true, result });
 });
 ```
 
@@ -126,13 +116,9 @@ const paymentHandler = createPaymentHandler({
   network: 'skale-base-sepolia',
   rpcUrl: 'YOUR_SKALE_RPC_URL',
   verifyPayment: async (payment) => {
-    // Verify payment on-chain
-    // Check signature, amount, expiration, etc.
     return true;
   },
   settlePayment: async (payment) => {
-    // Execute settlement
-    // Transfer tokens, record payment, etc.
     return { txHash: '0x...' };
   },
 });
@@ -145,17 +131,15 @@ Add fee calculation to your facilitator:
 ```typescript
 const facilitator = createFacilitator({
   network: 'skale-base-sepolia',
-  feeBasisPoints: 100, // 1% fee
+  feeBasisPoints: 100,
   paymentHandlers: [paymentHandler],
   calculateFee: (amount) => {
-    return (amount * 100) / 10000; // 1% fee
+    return (amount * 100) / 10000;
   },
 });
 ```
 
 ## Error Handling
-
-Handle payment errors gracefully:
 
 ```typescript
 app.post('/settle', async (req, res) => {
@@ -176,23 +160,6 @@ app.post('/settle', async (req, res) => {
   }
 });
 ```
-
-## Best Practices
-
-1. **Validate Payments**: Always verify payment signatures and amounts
-2. **Error Handling**: Provide clear error messages for failed settlements
-3. **Fee Transparency**: Clearly communicate fees to users
-4. **Security**: Use secure key management for payment verification
-5. **Monitoring**: Set up monitoring and alerting for payment processing
-
-## Security Considerations
-
-- Validate all payment signatures
-- Check payment expiration times
-- Verify payment amounts match requirements
-- Use secure key storage
-- Implement rate limiting
-- Monitor for suspicious activity
 
 ## Next Steps
 
