--- a/concepts/skale-chain/instant-finality.mdx
+++ b/concepts/skale-chain/instant-finality.mdx
@@ -31,6 +31,6 @@ SKALE's consensus mechanism ensures that once a block is committed with a superm
 
 ## Related Topics
 
-- [Consensus](/concepts/consensus)
+- [Consensus](/concepts/skale-chain/consensus)
 - [Threshold Schemes](/concepts/threshold-schemes)
 
