--- a/concepts/skale-chain/privacy.mdx
+++ b/concepts/skale-chain/privacy.mdx
@@ -69,6 +69,6 @@ Privacy on SKALE is implemented through:
 ## Related Topics
 
 - [BITE Protocol](/concepts/bite-protocol) - Learn about the protocol enabling privacy
-- [Trusted Execution Environments](/concepts/tees) - Hardware-based security
+- [Trusted Execution Environments](/concepts/skale-chain/tees) - Hardware-based security
 - [SKALE Network](/concepts/skale-network) - Network architecture supporting privacy
 
