--- a/concepts/skale-chain/skale-chain-101.mdx
+++ b/concepts/skale-chain/skale-chain-101.mdx
@@ -22,4 +22,4 @@ When a new SKALE Chain is created, the owner of the chain is provided elevated p
 
 Every SKALE Chain is a Layer 1 blockchain. SKALE is not a Layer 2 or a sidechain. SKALE Manager — the brain of SKALE — does live on the Ethereum mainnet and Base today, however, each and every SKALE Chain maintains its own state independently of Ethereum and leverages the SKALE shared validator pool, not Ethereum or Base validators.
 
-Each sChain has their own [consensus](../consensus), block production and validator nodes.
+Each sChain has their own [consensus](./consensus), block production and validator nodes.
