--- a/concepts/skale-network/horizontal-scalability.mdx
+++ b/concepts/skale-network/horizontal-scalability.mdx
@@ -132,5 +132,5 @@ Horizontal scalability is implemented through:
 - [Containerized Nodes](/concepts/skale-network/containerized-nodes) - Node architecture
 - [Virtualized Blockchains](/concepts/skale-network/virtualized-blockchains) - Blockchain virtualization
 - [Pooled Security Model](/concepts/skale-network/pooled-security-model) - Network security
-- [SKALE Manager](/concepts/skale-manager) - Network coordination
+- [SKALE Manager](/concepts/skale-network/skale-manager) - Network coordination
 
