--- a/concepts/skale-network/virtualized-blockchains.mdx
+++ b/concepts/skale-network/virtualized-blockchains.mdx
@@ -142,6 +142,6 @@ SKALE's virtualization differs from shared infrastructure by:
 
 - [Containerized Nodes](/concepts/skale-network/containerized-nodes) - Node containerization
 - [Horizontal Scalability](/concepts/skale-network/horizontal-scalability) - Network scaling
-- [SKALE Manager](/concepts/skale-manager) - Network coordination
+- [SKALE Manager](/concepts/skale-network/skale-manager) - Network coordination
 - [Pooled Security Model](/concepts/skale-network/pooled-security-model) - Network security
 
