--- a/developers/native-features/using-filestorage.mdx
+++ b/developers/native-features/using-filestorage.mdx
@@ -25,7 +25,7 @@ Storage space must be provided by a SKALE Chain owner. Please contact the SKALE 
 
 Anything that builds into HTML, CSS, JS, and media files will work. If you haven't already built a site, you can use the below:
 
-```html:index.html
+```html
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <html>
@@ -37,7 +37,7 @@ Anything that builds into HTML, CSS, JS, and media files will work. If you haven
 </html>
 ```
 
-```css:styles.css
+```css
 body {
     background-color: #ccc;
 }
@@ -75,7 +75,7 @@ Once complete, copy the above files into their respective files.
 
 Open the `index.js` file and copy in the following:
 
-```js:index.js
+```js
 #! /usr/bin/env node
 
 const Filestorage = require('@skalenetwork/filestorage.js');
