--- a/developers/skale-bridge/ethereum/bridge-erc20.mdx
+++ b/developers/skale-bridge/ethereum/bridge-erc20.mdx
@@ -42,7 +42,7 @@ certain circumstances. It is recommended that explicit burns on a SKALE Chain sh
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See InterchainSKL for an 18 decimal example and InterchainUSDT for a 6 decimal example.
 
-```solidity:InterchainERC20.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.19;
 
@@ -258,7 +258,7 @@ Gas Wallet, officially referred to as the community pool, is a smart contract on
 This step is optional IF the user has already filled up their gas wallet and has sufficient balance left.
 You can check if the wallet is an `activeUser` on the CommunityLocker 0xD2aaa00300000000000000000000000000000000 smart contract on the SKALE Chain. If active, no need to fill the pool again.
 
-```js:fillCommunityPool.js
+```js
 import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
 const PRIVATE_KEY = "[YOUR_PRIVATE_KEY]";
@@ -295,7 +295,7 @@ console.log("Success!");
 Once the above prepayment steps are completed, you can proceed with the bridging.
 Bridging from SKALE simply requires the `exitToMainERC20` function to be called with the corresponding token and amount to initiate the transfer back to Ethereum.
 
-```js:exit.js
+```js
 import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
 const PRIVATE_KEY = "[YOUR_PRIVATE_KEY]";
