--- a/developers/skale-bridge/ethereum/bridge-erc721.mdx
+++ b/developers/skale-bridge/ethereum/bridge-erc721.mdx
@@ -41,7 +41,7 @@ the supply on the SKALE Chain side could be "burned", while the tokens still exi
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See InterchainSKL for an 18 decimal example and InterchainUSDT for a 6 decimal example.
 
-```solidity:InterchainERC721.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.19;
 
@@ -93,7 +93,7 @@ contract InterchainERC721 is AccessControl, ERC721 {
 
 Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](https://hardhat.org), [Remix](https://remix.ethereum.org/#lang=en&optimize=false&runs=200&evmVersion=paris&version=soljson-v0.8.19+commit.7dd6d404.js), etc. to deploy your IMA compatible ERC-721 token to the SKALE Chain you want to be able to bridge assets too.
 
-```solidity:YourInterchainNFT.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.19;
 
@@ -247,7 +247,7 @@ Gas Wallet, officially referred to as the community pool, is a smart contract on
 This step is optional IF the user has already filled up their gas wallet and has sufficient balance left.
 You can check if the wallet is an `activeUser` on the CommunityLocker 0xD2aaa00300000000000000000000000000000000 smart contract on the SKALE Chain. If active, no need to fill the pool again.
 
-```js:fillCommunityPool.js
+```js
 import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
 const PRIVATE_KEY = "[YOUR_PRIVATE_KEY]";
@@ -284,7 +284,7 @@ console.log("Success!");
 Once the above prepayment steps are completed, you can proceed with the bridging.
 Bridging from SKALE simply requires the `exitToMainERC721` function to be called with the corresponding token and amount to initiate the transfer back to Ethereum.
 
-```js:exit.js
+```js
 import { Contract, JsonRpcProvider, Wallet, parseEther } from "ethers"; // npm add ethers
 
 const PRIVATE_KEY = "[YOUR_PRIVATE_KEY]";
