--- a/developers/skale-bridge/messaging-layer/create-custom-contracts.mdx
+++ b/developers/skale-bridge/messaging-layer/create-custom-contracts.mdx
@@ -8,7 +8,7 @@ The following implements a bi-directional flow of data to showcase both sending 
 
 ## Custom Contract
 
-```solidity:SendNumber.sol
+```solidity
 // SDPX-License-Identifier: MIT
 pragma solidity 0.8.9;
 
