--- a/developers/skale-bridge/skale/bridge-erc20.mdx
+++ b/developers/skale-bridge/skale/bridge-erc20.mdx
@@ -40,7 +40,7 @@ certain circumstances. It is recommended that explicit burns on a SKALE Chain sh
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See InterchainSKL for an 18 decimal example and InterchainUSDT for a 6 decimal example.
 
-```solidity:InterchainERC20.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.19;
 
