--- a/concepts/skale-chain/tees.mdx
+++ b/concepts/skale-chain/tees.mdx
@@ -49,6 +49,6 @@ SKALE's TEE implementation uses:
 ## Related Topics
 
 - [DKG with BLS](/concepts/dkg-with-bls)
-- [Validators](/validators/overview)
-- [Security Model](/architecture/security-model)
+- [Validators](/validators/run-supernode)
+
 
