--- a/developers/skale-bridge/skale/bridge-erc1155.mdx
+++ b/developers/skale-bridge/skale/bridge-erc1155.mdx
@@ -33,7 +33,7 @@ If the burn function is not locked down to just the IMA Bridge, specifically Tok
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See **YourInterchainNFT.sol** for an example.
 
-```solidity:InterchainERC1155.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.9;
 
@@ -85,7 +85,7 @@ contract InterchainERC1155 is AccessControl, ERC1155 {
 
 Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](https://hardhat.org), [Remix](https://remix.ethereum.org/#lang=en&optimize=false&runs=200&evmVersion=paris&version=soljson-v0.8.19+commit.7dd6d404.js), etc. to deploy your IMA compatible ERC-1155 token to the SKALE Chain you want to be able to bridge assets too.
 
-```solidity:InGameTokens.sol
+```solidity
 // SPDX-License-Identifier: MIT
 pragma solidity 0.8.19;
 
