--- a/validators/run-supernode.mdx
+++ b/validators/run-supernode.mdx
@@ -21,9 +21,7 @@ description: Setup Process for new SKALE Validator
 
    *Minimum ETH: 1.0*
 
-   **Get SKALE Manager contract ABIs from SKALE**
-
-   [https://raw.githubusercontent.com/skalenetwork/concepts/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json](https://raw.githubusercontent.com/skalenetwork/concepts/master/releases/mainnet/skale-manager/1.11.0/skale-manager-1.11.0-mainnet-abi.json)
+   **Get SKALE Manager contract ABIs from SKALE:** [Github](https://github.com/skalenetwork/skale-network/blob/master/releases/mainnet/skale-manager/1.12.0/skale-manager-1.12.0-mainnet-abi.json)
 
    **Fund SRW Wallet with ETH**
 
