--- a/get-started/quick-start/skale-on-base.mdx
+++ b/get-started/quick-start/skale-on-base.mdx
@@ -1,28 +1,22 @@
 ---
 title: "SKALE on Base"
-description: "SKALE on Base is a new deployment of the SKALE Network, bringing the power of SKALE to the Base ecosystem"
+description: "Bringing the power of SKALE to the Base ecosystem"
 ---
-
-SKALE is officially live with it's first ever **Expand** deployment on Base Sepolia Testnet! This marks the first time a new SKALE Chain has been created in a new environment.
-
-<Note>
-This chain and the network deployment are experimental and the following is subject to change. Do not use this chain for production applications or information you are not comfortable losing.
-</Note>
 
 ## Key Features
 
 The SKALE on Base testnet deployment retains 100% of the features you know and love from SKALE including:
 
-- Zero Gas Fees
 - Instant Finality (Single Slot Finality)
-- Native Bridge (Base Sepolia -> SKALE Base Testnet)
-- 268,435,455 block gas limit
-- 64kb contract deployment size limit
-- Solidity-Native Random Number Generator (VRF)
-- Leaderless consensus + High Performance C++ EVM
+- Zero Gas Fees
+- Native Bridge from Base to SKALE
+- A massive *268,435,455* block gas limit
+- The 2.5x *64kb* contract deployment size limit
+- Solidity-native Random Number Generator (VRF alternative)
+- High Performance C++ EVM
 - Native SKALE Oracle
 
-## Testnet
+## SKALE Base Testnet
 
 | Name | Value | 
 | --- | --- |
@@ -36,7 +30,7 @@ The SKALE on Base testnet deployment retains 100% of the features you know and l
 | Portal | Coming Soon |
 | Faucet | https://base-sepolia-faucet.skale.space |
 
-### Tokens
+### SKALE Base Testnet Tokens
 
 | Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Address |
 | --- | --- | --- | --- | --- |
@@ -47,7 +41,7 @@ The SKALE on Base testnet deployment retains 100% of the features you know and l
 | Wrapped Ether | WETH | 6 | [0x420...006](https://basescan.org/token/0x4200000000000000000000000000000000000006) | [0xf94...fc0](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xf94056bd7f6965db3757e1b145f200b7346b4fc0) |
 | ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xD2Aaa00700000000000000000000000000000000) |
 
-#### Notes
+### Chain Notes
 - When bridging ETH from Base Sepolia to the SKALE Chain, the ETH is locked as native ETH (msg.value) and is minted as an ERC-20 called ETHC on the SKALE Chain.
 On the frontend you can show it as ETH.
 - WETH and ETHC are both ERC-20 on the SKALE Chain but are deposited differently. WETH is deposited as WETH on Base.
@@ -56,3 +50,6 @@ On the frontend you can show it as ETH.
 
 Join us in [Telegram](https://t.me/+o_7DCw9qcbI2NDYx) and ask for additional tokens.
 
+<Note>
+This chain and the network deployment are experimental and the following is subject to change.
+</Note>
